jumping nav fixed

--- a/css/layout.css
+++ b/css/layout.css
@@ -34,7 +34,7 @@
 
     .header__logo {
         margin: 0;
-        padding: 10px 10px;
+        padding: 0px 10px;
     }
     
     .ham {
@@ -44,6 +44,7 @@
     nav ul {
         flex-direction: column;
         display: none;
+        margin-top: 10px;
     }
 
     ul:before {
